fixed text wrapping and list activated backgrounds

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -121,7 +121,7 @@ header li {
   width:89px;
   float:left;
   border-right:1px solid #e0e0e0;
-  height:40px;
+  height:50px;
 }
 
 
@@ -130,9 +130,10 @@ header ul a {
   font-size:16px;
   color:#393939;
   display:block;
-  text-align:center;
+  text-align:center;;
   line-height: 1.2;
-  padding-top:6px;
+  padding-top:8px;
+  padding-bottom: 8px;
   height:34px;
 }
 
@@ -181,14 +182,15 @@ footer {
 
 }
 
-@media print, screen  {
+@media print, screen {
 
   div.wrapper {
     width:auto;
     margin:0;
   }
   body{
-    width: 1000px;
+    word-wrap:break-word;
+    max-width: 1000px;
   }
 
   header, section, footer {
@@ -247,7 +249,7 @@ footer {
   }
 
 
-  header li, header ul li + li + li {
+  header li, header ul li + li + li + li {
     width:20%;
   }
 }
